--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="obj-enhancements.js"></script>
+    <script src="destructuring.js"> </script>
+    <h1>hello</h1>
 </body>
 </html>
